@@ -36,6 +36,8 @@
 #include "ports.h"
 #include "dbus.h"
 #include "kbd.h"
+#include "hwprot.h"
+#include "flash.h"
 #include "m68k.h"
 #include "images.h"
 #include "ti68k_def.h"
@@ -101,7 +103,9 @@ int hw_init(void)
     }
 
     // Do sub-initializations.
+	TRY(hw_hwp_init());
 	TRY(hw_mem_init());
+	TRY(hw_flash_init());
 	TRY(hw_io_init());
 	TRY(hw_dbus_init());
 	TRY(hw_kbd_init());
@@ -120,7 +124,9 @@ int hw_init(void)
 
 int hw_reset(void)
 {
+	TRY(hw_hwp_reset());
 	TRY(hw_mem_reset());
+	TRY(hw_flash_reset());
 	TRY(hw_io_reset());
 	TRY(hw_kbd_reset());
 	TRY(hw_dbus_reset());
@@ -135,7 +141,9 @@ int hw_exit(void)
 	TRY(hw_dbus_exit());
 	TRY(hw_kbd_exit());
 	TRY(hw_io_exit());
+	TRY(hw_flash_exit());
 	TRY(hw_mem_exit());
+	TRY(hw_hwp_exit());
 
     return 0;
 }
