@@ -34,6 +34,7 @@
 #include "ports.h"
 #include "hw.h"
 #include "mem.h"
+#include "mem89tm.h"
 #include "images.h"
 #include "bkpts.h"
 #include "m68k.h"
@@ -89,6 +90,14 @@ int ti89t_mem_init(void)
 		mem_tab[7] = tihw.io2;
 		mem_msk[7] = tihw.io2_size;
 	}
+
+	// set mappers
+	mem_get_byte_ptr = ti89t_get_byte;
+	mem_get_word_ptr = ti89t_get_word;
+	mem_get_long_ptr = ti89t_get_long;
+	mem_put_byte_ptr = ti89t_put_byte;
+	mem_put_word_ptr = ti89t_put_word;
+	mem_put_long_ptr = ti89t_put_long;
 
     return 0;
 }
